<resources>
    <string name="app_name">Week 1</string>
    <string name="icon_back">Icon Back</string>
    <string name="title_form">Form Pengisian Data</string>
    <string name="info">Info</string>
    <string name="desc_carview_form">Form berikut ini bertujuan untuk memberikan informasi kepada pusat agar dapat mudah dilaporkan</string>
    <string name="eclipse_cv">Eclipse CV</string>
    <string name="test_type">Jenis Tes</string>
    <string name="required">• Harus Diisi</string>
    <string name="pcr">PCR</string>
    <string name="rapid_antigen">Rapid Antigen</string>
    <string name="choose_date">Pilih Tanggal</string>
    <string name="value_checkbox">Dengan ini saya menyetujui bahwa data yang saya isikan adalah benar</string>
    <string name="next">Selanjutnya</string>
</resources>