<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/icon_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/textH1Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_form"
            app:layout_constraintStart_toStartOf="@+id/ivBack"
            app:layout_constraintTop_toBottomOf="@+id/ivBack" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvForm"
            style="@style/carViewCornSilk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/eclipse_cv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/eclipse_cv" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/textH4Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/textRegular12Gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/desc_carview_form"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTestType"
            style="@style/textH4Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/test_type"
            android:textColor="@color/color_charcoal"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvForm" />

        <TextView
            android:id="@+id/tvTestTypeRequired"
            style="@style/textBold10Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/required"
            app:layout_constraintBottom_toBottomOf="@+id/tvTestType"
            app:layout_constraintStart_toEndOf="@+id/tvTestType"
            app:layout_constraintTop_toTopOf="@+id/tvTestType"
            tools:ignore="SmallSp" />

        <RadioGroup
            android:id="@+id/rgType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTestType">

            <RadioButton
                android:id="@+id/rapidAntigen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPigmentGreen"
                android:checked="true"
                android:text="@string/rapid_antigen"
                android:textColor="@color/color_charcoal" />

            <RadioButton
                android:id="@+id/pcr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPigmentGreen"
                android:text="@string/pcr"
                android:textColor="@color/color_charcoal" />
        </RadioGroup>

        <EditText
            android:id="@+id/edtDate"
            android:layout_width="0dp"
            android:background="@drawable/shape_edit_text"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawableEnd="@drawable/calendar"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/choose_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgType"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/cbSetuju"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:checked="true"
            android:layout_marginTop="24dp"
            android:buttonTint="@color/colorPigmentGreen"
            android:layout_marginEnd="16dp"
            android:text="@string/value_checkbox"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/color_grey"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtDate"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_green"
            android:textColor="@color/white"
            android:layout_marginEnd="16dp"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbSetuju" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>